maybe fixed the weird cutoff thing

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ p {
     background-position: top;
     background-attachment: fixed;
     z-index: -2;
-
+    min-height: 100%;
 }
 
 .blur {
@@ -135,9 +135,8 @@ p {
 
 /*
 .total {
-    max-width: 1920px;
+    min-height: 100%;
 }
-
 */
 
 .main_content_padding {
